# Langchain-course

./: 2-DiveDeepAgents.py  5-RAGExampleonlyWithLCEL.py  5-RAGIngestion.py  5-RAGNaiveRetrieval.py  README.md  chains7.py  main.py  main6.py  main7.py  mediumblog1.txt  new_main.py  nodes6.py  prompt.py  pyproject.toml  react6.py  schemas.py
Basic Agentic Coding and Legacy Coding/: 1-CodeForStructuredOutputAndPydantic.py  2-DiveDeepAgents.py
Langraph Intro/: react6.py
Practice/: main.py  nodes.py  react.py
ReflectionAgent/: chains7.py  main7.py
Tool Calling/: 3-ToolCallingDemo.py  4.ToolCallingLatest.py
